--- a/src/components/createOrder/OrderForm.css
+++ b/src/components/createOrder/OrderForm.css
@@ -50,11 +50,11 @@ justify-content: space-between;
 }
 
 label {
-display: flex; 
-flex-direction: row;
-justify-content: left;
-
-padding: 0rem 2rem;
+flex-basis: 150px;
+flex-grow: 1;
+}
+.radios {
+display: flex;
 }
 
 .order-page {
@@ -69,14 +69,15 @@ margin-right: 20vh;
 .spancolor {
     color:#CE2829;
 }
-button {
+
+#order-button {
 background-color: #FDC913;
 padding: 5px 100px;
 border:1px solid #FDC913 ;
 border-radius: 2px;
 }
 
-p {
+.prd-prg {
 color:    #5F5F5F;
 }
 .form-th-part {
